# samdul00food-

./: .firebaserc  Dockerfile  README.md  pyproject.toml
.firebase/: hosting.cHVibGlj.cache
public/: index.html
src/samdul00food/: main.py
